# crypto-wallets-service

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.ru.md  ROADMAP.md  build.rs  docker-compose.yml  k8s-readiness-report.md  postman_collection.json
.github/workflows/: ci.yml
config/: default.toml
docker/: prod.Dockerfile  vault-init.sh
k8s/: README.md
k8s/base/: deployment.yaml  hpa.yaml  kustomization.yaml  migration-job.yaml  pdb.yaml  service.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: 20240125000000_initial.sql  20260125000001_create_audit_logs.sql  20260221000000_add_indexes.sql
proto/: wallet.proto
src/: auth.rs  config.rs  lib.rs  main.rs
src/api/: mod.rs
src/core/: mod.rs
src/db/: mod.rs
src/redis/: mod.rs
src/vault/: mod.rs
tests/: integration_test.rs
tests/http-requests/: http-client.env.json  requests.http
