[package]
name = "crypto-wallets-service"
version = "0.3.0"
edition = "2024"

[dependencies]
# Web & API
axum = "0.7"
tokio = { version = "1", features = ["full", "test-util"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util", "catch-panic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
alloy = { version = "0.1", features = ["full"] }
coins-bip32 = "0.8"
coins-bip39 = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
bip39 = { version = "2.0", features = ["rand"] }
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"

# Configuration & Logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Misc
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
sha2 = "0.10.9"
crc16 = "0.4.0"
subtle = "2.6"
tonlib-core = "0.26"
ipnet = { version = "2.9", features = ["serde"] }

# Advanced Features
utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum-prometheus = "0.6"
tower_governor = "0.4"
governor = "0.6"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
